--- a/Assets/UI/StyleSheets/LayoutEditorStyles.uss
+++ b/Assets/UI/StyleSheets/LayoutEditorStyles.uss
@@ -1,13 +1,15 @@
 VisualElement {
 }
 
-.ve_table_icon {
+.icon_image {
     flex-grow: 0;
     background-color: rgba(0, 0, 0, 0);
-    background-image: url('project://database/Assets/UI/Sprites/Table.jpg?fileID=21300000&guid=2107f81ea2d756a4891d00d99b1466db&type=3#Table');
-    width: 128px;
-    height: 64px;
+    width: 64px;
+    height: 32px;
     flex-shrink: 0;
+    padding-top: 10px;
+    -unity-background-scale-mode: scale-and-crop;
+    top: 16px;
 }
 
 .button_table_icon {
@@ -18,5 +20,47 @@ VisualElement {
 }
 
 .hidden {
-	display: none;
+    display: none;
+}
+
+.icon_container {
+    flex-grow: 0;
+    background-color: rgb(245, 224, 181);
+    width: 128px;
+    height: 64px;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    border-left-width: 3px;
+    border-right-width: 3px;
+    border-top-width: 3px;
+    border-bottom-width: 3px;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+}
+
+.table_icon {
+    background-image: url('project://database/Assets/UI/Sprites/Table.jpg?fileID=2800000&guid=2107f81ea2d756a4891d00d99b1466db&type=3#Table');
+}
+
+.icon_label {
+    top: 25px;
+}
+
+.worker_icon {
+    background-image: url('project://database/Assets/UI/Sprites/Worker.jpg?fileID=2800000&guid=28d9d37f56af0a742b1140e9967b1260&type=3#Worker');
+}
+
+.trolley_icon {
+    background-image: url('project://database/Assets/UI/Sprites/Trolley.jpg?fileID=2800000&guid=441d0cc464237d34aa308b5df8e42f17&type=3#Trolley');
+}
+
+.conveyor_icon {
+    background-image: url('project://database/Assets/UI/Sprites/Conveyor%20Roller.jpg?fileID=2800000&guid=c1d7395b32dbb28499252fdd0589535b&type=3#Conveyor Roller');
+}
+
+.machine_icon {
+    background-image: url('project://database/Assets/UI/Sprites/Machinery.jpg?fileID=2800000&guid=d932ee7b3e944b94ba919083a366958a&type=3#Machinery');
 }
