--- a/Assets/UI/UXML/LayoutEditor.uxml
+++ b/Assets/UI/UXML/LayoutEditor.uxml
@@ -9,16 +9,17 @@
             </ui:VisualElement>
             <ui:VisualElement name="ve_selection_inspector" class="skyblue_background" style="flex-grow: 1; overflow: hidden; width: 50%; visibility: visible;">
                 <ui:Label tabindex="-1" text="Current Selection" display-tooltip-when-elided="true" style="font-size: 24px; -unity-text-align: upper-center;" />
-                <ui:VisualElement name="ve_inspector_container" style="flex-direction: row;">
-                    <ui:VisualElement name="ve_left_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 40%;">
+                <ui:VisualElement name="ve_inspector_container" style="flex-direction: row; padding-bottom: 40px;">
+                    <ui:VisualElement name="ve_left_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 40%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-right-width: 1px;">
                         <ui:FloatField label="Height" value="42.2" name="float_height" class="inspector_float_field" style="width: 50%;" />
                         <ui:FloatField label="Width" value="42.2" name="float_width" class="inspector_float_field" style="width: 50%;" />
                     </ui:VisualElement>
                     <ui:VisualElement name="ve_right_fields" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 60%;">
-                        <ui:Vector2Field label="Position" name="v2_position" style="padding-right: 10px; width: 65%;" />
+                        <ui:Vector2Field label="Position" name="v2_position" style="padding-right: 10px;" />
                         <ui:Slider picking-mode="Ignore" label="Rotation" value="42" high-value="180" low-value="-180" inverted="false" name="slider_rotation" style="padding-right: 20px;" />
                     </ui:VisualElement>
                 </ui:VisualElement>
+                <ui:Button text="Delete" display-tooltip-when-elided="true" name="btn_delete" style="width: 25%; align-self: center; -unity-font-style: bold;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="ve_layout_container" focusable="true" style="background-color: rgba(0, 0, 0, 0); flex-grow: 1; height: 60%; min-height: auto; min-width: auto;">
