--- a/Assets/UI/StyleSheets/LayoutEditorStyles.uss
+++ b/Assets/UI/StyleSheets/LayoutEditorStyles.uss
@@ -35,10 +35,14 @@ VisualElement {
     border-right-width: 3px;
     border-top-width: 3px;
     border-bottom-width: 3px;
-    border-left-color: rgb(0, 0, 0);
-    border-right-color: rgb(0, 0, 0);
-    border-top-color: rgb(0, 0, 0);
-    border-bottom-color: rgb(0, 0, 0);
+    border-left-color: rgb(250, 250, 250);
+    border-right-color: rgb(250, 250, 250);
+    border-top-color: rgb(250, 250, 250);
+    border-bottom-color: rgb(250, 250, 250);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .table_icon {
@@ -51,6 +55,9 @@ VisualElement {
 
 .worker_icon {
     background-image: url('project://database/Assets/UI/Sprites/Worker.jpg?fileID=2800000&guid=28d9d37f56af0a742b1140e9967b1260&type=3#Worker');
+    width: 64px;
+    height: 64px;
+    -unity-background-scale-mode: scale-to-fit;
 }
 
 .trolley_icon {
